# xiaoetong-video-downloader

./: .gitignore  Makefile  README.md  config.json  config.json.example  main.py  requirements.txt
backend/: backend.spec  server.py
gui/: package-lock.json  package.json
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs
scripts/: build-backend.sh  download-ffmpeg.sh  fix_encrypted_videos.py
src/xiaoet_downloader/api/: client.py
src/xiaoet_downloader/core/: downloader.py  manager.py  transcoder.py
src/xiaoet_downloader/models/: config.py
src/xiaoet_downloader/utils/: logger.py
