[package]
name = "xiaoet-downloader"
version = "1.0.0"
description = "小鹅通视频下载器"
authors = ["you"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
